# termgram

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh
include/: AppConfiguration.hpp  TGramClient.hpp  TermgramClient.hpp  debug.hpp  version.hpp
include/ui/: Terminal.hpp  TerminalScreen.hpp  TextBox.hpp  keyboard.hpp
src/: TGramClient.cpp  TermgramClient.cpp  main.cpp
src/ui/: TextBox.cpp
test/: TextBoxTest.cpp
